# hades

./: .gitignore  COPYRIGHT-TRANSFER.txt  LICENSE  README.md  Setup.hs  builder-init.ps1  cabal.config  cabal.project  hades.cabal  hie.yaml  install.sh  packdsm.ps1  patch.ps1  stack.yaml  update-icons.sh
Documents/: Notes on Windows Build.txt
banana-ui/: COPYRIGHT-TRANSFER.txt  README.md  Setup.hs  cabal.project  hie.yaml  stack.yaml
banana-ui/base/: LICENSE  banana-ui-base.cabal
banana-ui/base/Data/: VTree.hs
banana-ui/base/Data/Default/: Orphan.hs
banana-ui/base/Data/UUID/: Generate.hs
banana-ui/base/Reactive/Banana/: ArrowDialog.hs  Common.hs  Dialog.hs  GadgetPrimitives.hs  Menu.hs  Table.hs
banana-ui/demo-arrow/: Main.hs  demo-arrow.cabal
banana-ui/demo-arrow/Demo/: Cond.hs  Dialog.hs  Notebook.hs  Table.hs
banana-ui/demo-gi/: Main.hs  demo-dialog-gi.cabal
banana-ui/demo-gi/Demo/: Dialog.hs  Notebook.hs  Tree.hs  TreeTable.hs
banana-ui/demo-webit/: Dialog.hs  Main.hs  Types.hs  demo-webit.cabal
banana-ui/gtk/: banana-gtk.css  banana-ui-gtk.cabal
banana-ui/gtk/Reactive/Banana/: GI.hs
banana-ui/gtk/Reactive/Banana/GI/: ArrowDialog.hs  Common.hs  Connect.hs  DataIconTheme.hs  Dialog.hs  ErrorBox.hs  Menu.hs  Table.hs
banana-ui/gtk/demo-arrow/: Main.hs
banana-ui/gtk/demo-arrow/Demo/: Cond.hs  Dialog.hs  Notebook.hs  Table.hs
banana-ui/gtk/src/Reactive/Banana/: GI.hs
banana-ui/gtk/src/Reactive/Banana/GI/: ArrowDialog.hs  Common.hs  Connect.hs  DataIconTheme.hs  ErrorBox.hs  Menu.hs  Table.hs
banana-ui/uuid-gen/: uuid-gen.cabal
banana-ui/uuid-gen/Data/UUID/: Generate.hs
banana-ui/webits/: README.md  webits.cabal
banana-ui/webits/Data/: ForestModel.hs
banana-ui/webits/JQuery/: jquery-ui.css  jquery-ui.min.css  jquery-ui.theme.css  jquery-ui.theme.min.css
banana-ui/webits/JS/: AppendGrid-dev.js  arrowDialog.js
banana-ui/webits/Network/Webits/: StyleSheets.hs  Table.hs
banana-ui/webits/demo-webit/: Dialog.hs  Main.hs  Matrix.hs  Menu.hs  Types.hs
banana-ui/webits/src/Control/Concurrent/: TState.hs
banana-ui/webits/src/Data/: ForestModel.hs
banana-ui/webits/src/Network/: Webits.hs
banana-ui/webits/src/Network/Webits/: ArrowDialog.hs  Icons.hs  Menu.hs  StyleSheets.hs  Table.hs
banana-ui/webits/test/: TestMain.hs
causality/: LICENSE  causality.cabal
causality/Causality/: FieldNames.hs  Risk.hs
causality/hicolor/: icon-theme.cache
dsm/: Main.hs  MyWixUI_InstallDir.wxi  binHades.wxi  dsm.cabal  dsm.iss  dsm.wxs  libGio.wxi  libPixbuf.wxi  shareGlib.wxi  shareGtk.wxi  shareHades.wxi  shareIcons.wxi
dsm/Assets/: background.xcf  banner.xcf
dsm/DSM/: SafetyCase.hs
dsm/Diametric/: icon-theme.cache  index.theme  theme-png.sh
dsm/causality/Causality/: FieldNames.hs  Model.hs  Risk.hs
dsm/gsn/GSN/: FieldNames.hs  Model.hs
dsm/share/: README.md
dsm/share/Diametric/: icon-theme.cache  index.theme
dsm/share/documentation/: Manual.html  Support.html
dsm/share/examples/: 1 Quick Guide to the DSM.dsm  3 Managing Risks.dsm
dsm/share/hicolor/: icon-theme.cache  index.theme
evidence/: README.txt
evidence/Evidence/: Model.hs
evidence/hicolor/: icon-theme.cache  index.theme
gsn/: gsn.cabal
gsn/GSN/: FieldNames.hs
gsn/hicolor/: icon-theme.cache  index.theme
hades/: hades.cabal
hades/evidence/Evidence/: Model.hs
hades/share/: hades-gtk.css  report.css
hades/share/docx/word/: fontTable.xml
hades/share/docx/word/_rels/: document.xml.rels
hades/share/hicolor/: icon-theme.cache  index.theme
hades/src/App/: Appearance.hs  GenericDiagram.hs  ModelMain.hs  Welcome.hs
hades/src/Control/Lens/: Hades.hs
hades/src/Data/Aeson/: Orphan.hs
hades/src/Hades/: Abstract.hs  GI.hs
hades/src/Hades/Abstract/: AutoBanana.hs  AutoMonad.hs  BasicShapes.hs  Commands.hs  Connections.hs  Delta.hs  Diagram.hs  Geometry.hs  Menus.hs  Primitives.hs  Toolbar.hs
hades/src/Hades/GI/: BasicShapes.hs  MouseMachine.hs  Rendering.hs  Saving.hs  Toolbar.hs
hades/src/Model/Abstract/: BasicTypes.hs  DiagramType.hs  Import.hs  ModelExport.hs  PackageTree.hs  Properties.hs
hades/src/Model/GI/: Export.hs  ModelDiagrams.hs  Notebooks.hs  PackageTree.hs
hades/src/Model/Lookups/: Base.hs
hades/src/Model/Matrices/: Base.hs  Design.hs  Excel.hs  Screen.hs
hades/src/Model/Query/: Base.hs  Diagram.hs
hades/src/Model/Reflection/: Dialogs.hs  NamedRelation.hs  Parser.hs  References.hs  Reflective.hs  Types.hs  Values.hs
hades/src/Model/Report/: Base.hs  Dialogs.hs  Document.hs  Docx.hs  Html.hs  Walkable.hs
hades/src/Model/Report/Docx/: Document.hs  Drawing.hs  File.hs  Utils.hs
hades/src/System/Hades/: Autosave.hs  DataFiles.hs  EditLock.hs
hades/src/Text/: NaturalOrder.hs
hades/test/: Main.hs
hades/test/Test/: Expression.hs
hades/test/Test/AutoMonad/: Exceptions.hs
hades/test/Test/GI/: PackageTree.hs
hades/test/Test/Report/: TestDocument.hs
share/hades/: README.md  editor-ui.glade  hades-gtk.css  theme-png.sh
share/hades/documentation/: theme.css
share/hades/docx/: [Content_Types].xml
share/hades/docx/docProps/: app.xml  core.xml
share/hades/examples/: 1 Quick Guide to the DSM.dsm  2 FMEA.dsm  4 Managing Hazards.dsm
share/hades/hicolor/: icon-theme.cache  index.theme
src/App/: Appearance.hs  GenericDiagram.hs  ModelMain.hs  Welcome.hs
src/Control/Lens/: Hades.hs
src/Data/Aeson/: Orphan.hs
src/Hades/: GI.hs
src/Hades/Abstract/: AutoBanana.hs  AutoMonad.hs  Commands.hs  Delta.hs  Diagram.hs  Menus.hs
src/Hades/GI/: BasicShapes.hs  MouseMachine.hs  Toolbar.hs
src/Model/Abstract/: BasicTypes.hs  ModelExport.hs  PackageTree.hs  Properties.hs
src/Model/GI/: Export.hs  ModelDiagrams.hs  Notebooks.hs
src/Model/Matrices/: Design.hs  Screen.hs
src/Model/Query/: Base.hs  Diagram.hs
src/Model/Reflection/: Dialogs.hs  NamedRelation.hs  Reflective.hs  Types.hs  Values.hs
src/Model/Report/: Dialogs.hs  Docx.hs
src/System/Hades/: DataFiles.hs  EditLock.hs
stress-test/: Stress.hs  stress.cabal
test/: Main.hs
test/Test/AutoMonad/: Exceptions.hs
test/Test/Report/: TestDocument.hs
(+5 files in other folders)
