cabal-version: 2.4
name: dsm
description: Safety case modelling tool based on the HADES library.
version: 2.0.0
build-type: Simple
license: BSD-3-Clause
copyright: © 2020 Paul Johnson
author: Paul Johnson
maintainer: paul@cogito.org.uk
synopsis: Diametric Safety Case Manager
category: Modelling
data-dir: share
data-files:
   Diametric/48x48/general/*.png
   Diametric/48x48/road-signs/*.png
   Diametric/scalable/general/*.svg
   Diametric/scalable/road-signs/*.svg
   Diametric/icon-theme.cache
   Diametric/index.theme
   documentation/Manual.html
   documentation/Manual.pdf
   documentation/Support.html
   documentation/theme.css
   documentation/LICENSE.txt
   documentation/welcome.svg
   hicolor/48x48/categories/*.png
   hicolor/scalable/categories/*.svg
   hicolor/index.theme
   hicolor/icon-theme.cache
   examples/*.dsm

library
   exposed-modules:
      Causality.FieldNames
      Causality.Model
      Causality.Risk
      GSN.Model
      GSN.FieldNames
   hs-source-dirs: causality gsn
   default-language: Haskell2010
   other-modules: Paths_dsm
   autogen-modules: Paths_dsm
   default-extensions: ExistentialQuantification ExtendedDefaultRules
                       FlexibleContexts FlexibleInstances FunctionalDependencies
                       GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
                       OverloadedStrings Rank2Types RankNTypes RecursiveDo
                       ScopedTypeVariables TemplateHaskell TupleSections TypeFamilies
                       ViewPatterns
   ghc-options:        -Wall
   build-depends:
      aeson,
      banana-ui-base,
      banana-ui-gtk,
      base >=4.14 && < 4.15,
      base64-bytestring,
      colour,
      containers,
      gi-cairo,
      gi-cairo-render,
      gi-gtk,
      gi-pango,
      gi-pangocairo,
      hades,
      lens,
      mtl,
      reactive-banana,
      text,
      transformers,
      uuid,
      unordered-containers,
      vector

executable dsm
   main-is: Main.hs
   default-language: Haskell2010
   other-modules: Paths_dsm DSM.SafetyCase
   autogen-modules: Paths_dsm
   default-extensions: ExistentialQuantification ExtendedDefaultRules
                        FlexibleContexts FlexibleInstances FunctionalDependencies
                        GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
                        OverloadedStrings Rank2Types RankNTypes RecursiveDo
                        ScopedTypeVariables TemplateHaskell TupleSections TypeFamilies
                        ViewPatterns
   build-depends:
      aeson,
      banana-ui-base,
      banana-ui-gtk,
      base >=4.14 && < 4.15,
      base64-bytestring,
      containers,
      dsm,
      filepath,
      gi-cairo,
      gi-gtk,
      gi-pango,
      gi-pangocairo,
      hades,
      lens,
      mtl,
      reactive-banana,
      text,
      uuid,
      unordered-containers,
      vector

   if os(windows)
      ghc-options: -optl-mwindows -Wall
   else
      ghc-options: -Wall
