cabal-version: >=1.18
name: gsn
version: 1.3.19
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: © 2020 Paul Johnson
author: Paul Johnson
maintainer: paul@cogito.org.uk
synopsis: Diametric Safety Case Manager
category: Modelling
data-files:
   hicolor/scalable/categories/*.svg
   hicolor/index.theme
   hicolor/icon-theme.cache

library
   exposed-modules:
      GSN.Model
      GSN.FieldNames
   default-language: Haskell2010
   other-modules:
      Paths_gsn
   default-extensions: ExistentialQuantification ExtendedDefaultRules
                       FlexibleContexts FlexibleInstances FunctionalDependencies
                       GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
                       OverloadedStrings Rank2Types RankNTypes RecursiveDo
                       ScopedTypeVariables TemplateHaskell TupleSections TypeFamilies
                       ViewPatterns
   ghc-options:        -Wall -j -O2
   build-depends:
      aeson -any,
      banana-ui-base -any,
      banana-ui-gtk -any,
      base -any,
      colour -any,
      containers -any,
      filepath -any,
      hades -any,
      gi-cairo-render -any,
      gi-gtk -any,
      gi-pango -any,
      lens -any,
      text -any,
      transformers -any
