cabal-version: 2.4
name: hades
synopsis: Haskell Diagram Editing System (HADES)
description: Library for diagram notations representing models of systems.
version: 2.0.0
build-type: Simple
license: BSD-3-Clause
license-file: LICENSE
copyright: © 2020 Paul Johnson
author: Paul Johnson
maintainer: paul@cogito.org.uk
category: Graphics
data-dir: share
data-files:
    hicolor/scalable-up-to-32/status/*.svg
    hicolor/16x16/stock/image/*.png
    hicolor/16x16/actions/*.symbolic.png
    hicolor/24x24/actions/*.symbolic.png
    hicolor/32x32/actions/*.symbolic.png
    hicolor/48x48/actions/*.symbolic.png
    hicolor/48x48/actions/*.png
    hicolor/48x48/categories/*.png
    hicolor/48x48/stock/image/*.png
    hicolor/64x64/actions/*.symbolic.png
    hicolor/96x96/actions/*.symbolic.png
    hicolor/scalable/categories/*.svg
    hicolor/scalable/stock/image/*.svg
    hicolor/scalable/actions/*.svg
    hicolor/index.theme
    hicolor/icon-theme.cache
    editor-ui.glade
    hades-gtk.css
    report.css
    docx/_rels/.rels
    docx/docProps/*.xml
    docx/word/_rels/document.xml.rels
    docx/word/theme/theme1.xml
    docx/word/*.xml
    docx/[Content_Types].xml

library
  exposed-modules:
      App.Appearance
      App.GenericDiagram
      App.ModelMain
      App.Welcome
      Control.Lens.Hades
      Data.Aeson.Orphan
      Evidence.Model
      Hades.Abstract
      Hades.Abstract.AutoBanana
      Hades.Abstract.AutoMonad
      Hades.Abstract.BasicShapes
      Hades.Abstract.Commands
      Hades.Abstract.Connections
      Hades.Abstract.Delta
      Hades.Abstract.Diagram
      Hades.Abstract.Geometry
      Hades.Abstract.Menus
      Hades.Abstract.Primitives
      Hades.Abstract.Toolbar
      Hades.GI
      Hades.GI.BasicShapes
      Hades.GI.MouseMachine
      Hades.GI.Rendering
      Hades.GI.Saving
      Hades.GI.Toolbar
      Model.Abstract.BasicTypes
      Model.Abstract.DiagramType
      Model.Abstract.Import
      Model.Abstract.ModelExport
      Model.Abstract.PackageTree
      Model.Abstract.Properties
      Model.GI.ModelDiagrams
      Model.GI.Notebooks
      Model.GI.PackageTree
      Model.GI.Export
      Model.Lookups.Base
      Model.Matrices.Base
      Model.Matrices.Design
      Model.Matrices.Excel
      Model.Matrices.Screen
      Model.Query.Base
      Model.Query.Diagram
      Model.Reflection.Dialogs
      Model.Reflection.NamedRelation
      Model.Reflection.Parser
      Model.Reflection.References
      Model.Reflection.Reflective
      Model.Reflection.Types
      Model.Reflection.Values
      Model.Report.Base
      Model.Report.Dialogs
      Model.Report.Document
      Model.Report.Docx
      Model.Report.Docx.Document
      Model.Report.Docx.Drawing
      Model.Report.Docx.File
      Model.Report.Docx.Utils
      Model.Report.Html
      Model.Report.Walkable
      System.Hades.Autosave
      System.Hades.DataFiles
      System.Hades.EditLock
      Text.NaturalOrder
  hs-source-dirs: src, evidence
  other-modules: Paths_hades
  autogen-modules: Paths_hades
  default-language: Haskell2010
  default-extensions: Arrows DeriveFunctor ExistentialQuantification
                        ExtendedDefaultRules FlexibleContexts FlexibleInstances
                        FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
                        MultiParamTypeClasses MultiWayIf OverloadedStrings Rank2Types
                        RankNTypes RecursiveDo ScopedTypeVariables TemplateHaskell
                        TupleSections TypeFamilies ViewPatterns
  ghc-options: -Wall
  build-depends:
      aeson,
      array,
      banana-ui-base == 2.0.0,
      banana-ui-gtk == 1.2.14,
      base >=4.14 && < 4.15,
      blaze-html,
      blaze-markup,
      bytestring,
      colour,
      conduit-extra,
      containers,
      data-default,
      directory,
      email-validate,
      filepath,
      fgl,
      filelock,
      filepath,
      free,
      gi-cairo,
      gi-cairo-connector,
      gi-cairo-render,
      gi-gdk,
      gi-gdkpixbuf,
      gi-gio,
      gi-glib,
      gi-gobject,
      gi-gtk,
      gi-gtk-hs,
      gi-pango,
      gi-pangocairo,
      gi-rsvg,
      haskell-gi-overloading >=1.0,
      haskell-gi-base,
      http-conduit,
      http-types,
      JuicyPixels,
      lens,
      lens-xml,
      megaparsec,
      mtl,
      network-uri,
      optparse-applicative,
      parser-combinators,
      reactive-banana,
      stm,
      temporary,
      text,
      text-icu,
      time,
      transformers,
      unordered-containers,
      uuid,
      vector,
      xlsx,
      xml,
      zip-archive

  if os(windows)
        build-depends:
            Win32,
            HUnit,
            base64-bytestring
  else
        build-depends:
            unix,
            HUnit,
            base64-bytestring


test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    other-modules:
        Test.GI.PackageTree
        Test.Report.TestDocument
        Test.Expression
        Test.AutoMonad.Exceptions
    default-language: Haskell2010
    default-extensions: DeriveFunctor ExistentialQuantification
                        ExtendedDefaultRules FlexibleContexts FlexibleInstances
                        FunctionalDependencies GeneralizedNewtypeDeriving LambdaCase
                        MultiParamTypeClasses OverloadedStrings Rank2Types RankNTypes
                        RecursiveDo ScopedTypeVariables TemplateHaskell TupleSections
                        TypeFamilies ViewPatterns
    ghc-options: -Wall
    build-depends:
        base >=4.14 && < 4.15,
        blaze-html,
        bytestring,
        containers,
        crypto-api,
        directory,
        filepath,
        gi-gtk,
        hades,
        HUnit,
        lens,
        megaparsec,
        mtl,
        QuickCheck,
        text,
        time,
        uuid
