cabal-version: >=1.18
name:          banana-ui-base
version:       2.0.0
license:       BSD3
license-file:  LICENSE
copyright:     © 2020 Paul Johnson
maintainer:    paul@cogito.org.uk
author:        Paul Johnson
synopsis:      GTK integrationfor Reactive Banana.
description:   Declarative user interfaces for Reactive Banana.
category:      FRP, Graphics
build-type:    Simple

library
   exposed-modules:
      Data.Default.Orphan
      Data.VTree
      Reactive.Banana.ArrowDialog
      Reactive.Banana.Common
      Reactive.Banana.GadgetPrimitives
      Reactive.Banana.Menu
      Reactive.Banana.Table

   default-language:   Haskell2010
   default-extensions:
      DeriveFunctor ExistentialQuantification ExtendedDefaultRules
      FlexibleContexts FlexibleInstances FunctionalDependencies
      GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
      MultiWayIf OverloadedStrings Rank2Types RankNTypes RecursiveDo
      ScopedTypeVariables TemplateHaskell TupleSections TypeFamilies
      ViewPatterns

   ghc-options:        -Wall -j -O2
   build-depends:
      base >=4.7,
      bytestring -any,
      colour -any,
      containers >=0.5,
      data-default -any,
      lens -any,
      reactive-banana -any,
      text -any,
      time -any,
      vector -any
