cabal-version: 2.4
name:          banana-ui-base
version:       2.0.0
license:       BSD-3-Clause
license-file:  LICENSE
copyright:     © 2020 Paul Johnson
maintainer:    paul@cogito.org.uk
author:        Paul Johnson
synopsis:      GTK integrationfor Reactive Banana.
description:   Declarative user interfaces for Reactive Banana.
category:      FRP, Graphics
build-type:    Simple

library
   exposed-modules:
      Data.Default.Orphan
      Data.UUID.Generate
      Data.VTree
      Reactive.Banana.ArrowDialog
      Reactive.Banana.Common
      Reactive.Banana.GadgetPrimitives
      Reactive.Banana.Menu
      Reactive.Banana.Table

   default-language:   Haskell2010
   default-extensions:
      DeriveFunctor ExistentialQuantification ExtendedDefaultRules
      FlexibleContexts FlexibleInstances FunctionalDependencies
      GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
      MultiWayIf OverloadedStrings Rank2Types RankNTypes RecursiveDo
      ScopedTypeVariables TemplateHaskell TupleSections TypeFamilies
      ViewPatterns

   ghc-options:        -Wall
   build-depends:
      base >=4.14 && < 4.15,
      bytestring,
      colour,
      containers >=0.5,
      data-default,
      DRBG,
      lens,
      reactive-banana,
      text,
      time,
      uuid,
      vector
