cabal-version: >=1.18
name:          demo-dialog-gi
version:       1.2.14
license:       BSD3
copyright:     © 2020 Paul Johnson
maintainer:    paul@cogito.org.uk
author:        Paul Johnson
synopsis:      GTK integration for Reactive Banana.
description:   Declarative user interfaces for GTK3 and Reactive Banana.
category:      FRP, Graphics
build-type:    Simple

executable demo-dialog-gi
    main-is:          Main.hs
    other-modules:
        Demo.Dialog
        Demo.Notebook
        Demo.Table
        Demo.Tree
        Demo.TreeTable
    default-language: Haskell2010
    ghc-options:      -Wall -j
    build-depends:
        base >=4.7 && <5,
        banana-ui-base -any,
        banana-ui-gtk -any,
        colour -any,
        containers -any,
        gi-gtk -any,
        lens -any,
        reactive-banana >=1.1,
        text >=1.2,
        time -any
