cabal-version: 1.18
name:         demo-webit
version:      1.0.1
license:      BSD3
license-file: LICENSE
copyright:    © 2021 Paul Johnson
maintainer:   paul@cogito.org.uk
author:       Paul Johnson
synopsis:     Demo of web integration for ArrowDialog GUI.
description:  The ArrowDialog gadgets used in web browsers.
category:     FRP, Graphics, Web
build-type:   Simple
data-files:   Testcard_F.jpg

executable demo-webit
   main-is: Main.hs
   other-modules: Dialog, Matrix, Menu, Types, Paths_demo_webit
   default-language: Haskell2010
   default-extensions: Arrows DeriveFunctor ExistentialQuantification
                       ExtendedDefaultRules FlexibleContexts FlexibleInstances
                       FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
                       MultiParamTypeClasses MultiWayIf OverloadedStrings Rank2Types
                       RankNTypes RecursiveDo ScopedTypeVariables TemplateHaskell
                       TupleSections TypeFamilies ViewPatterns
   -- Vanilla compile.
   ghc-options: -Wall -j -threaded

   -- Threadscope.
   -- ghc-options: -Wall -j -threaded -eventlog -rtsopts

   -- Profiling.
   -- ghc-options: -Wall -j -threaded -prof -fprof-auto
   build-depends:
      aeson -any,
      base >=4.7 && <5,
      banana-ui-base -any,
      blaze-html -any,
      clay -any,
      colour -any,
      containers -any,
      http-types -any,
      javascript-bridge -any,
      lens -any,
      modern-uri -any,
      mtl -any,
      random -any,
      QuickCheck -any,
      scotty -any,
      stm -any,
      text >= 1.2,
      time -any,
      webits -any
