cabal-version: >=1.18
name:          banana-ui-gtk
version:       1.2.14
license:       BSD3
license-file:  LICENSE
copyright:     © 2020 Paul Johnson
maintainer:    paul@cogito.org.uk
author:        Paul Johnson
synopsis:      GTK integration for Reactive Banana.
description:   Declarative user interfaces for GTK3 and Reactive Banana.
category:      FRP, Graphics
build-type:    Simple
data-files: banana-gtk.css

library
   hs-source-dirs: src
   exposed-modules:
      Reactive.Banana.GI
      Reactive.Banana.GI.ArrowDialog
      Reactive.Banana.GI.Common
      Reactive.Banana.GI.Connect
      Reactive.Banana.GI.DataIconTheme
      Reactive.Banana.GI.ErrorBox
      Reactive.Banana.GI.Menu
      Reactive.Banana.GI.Table
   default-language:   Haskell2010
   default-extensions:
      DeriveFunctor ExistentialQuantification ExtendedDefaultRules
      FlexibleContexts FlexibleInstances FunctionalDependencies
      GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
      MultiWayIf OverloadedStrings Rank2Types RankNTypes RecursiveDo
      ScopedTypeVariables TemplateHaskell TupleSections TypeFamilies
      ViewPatterns
   ghc-options:        -Wall -j -O2
   other-modules: Paths_banana_ui_gtk
   autogen-modules: Paths_banana_ui_gtk
   build-depends:
      base >=4.7,
      banana-ui-base -any,
      bytestring -any,
      colour -any,
      containers >=0.5,
      data-default -any,
      gi-cairo -any,
      gi-cairo-connector -any,
      gi-cairo-render -any,
      gi-gdk -any,
      gi-gdkpixbuf -any,
      gi-gio -any,
      gi-glib -any,
      gi-gobject -any,
      gi-gtk -any,
      gi-gtk-hs -any,
      gi-pango -any,
      haskell-gi-base -any,
      haskell-gi-overloading >=1.0,
      lens -any,
      mtl -any,
      random -any,
      reactive-banana -any,
      text -any,
      time -any,
      transformers -any,
      -- uuid -any,
      vector -any

executable demo-arrow
   hs-source-dirs: demo-arrow
   main-is: Main.hs
   other-modules:
      Demo.Cond
      Demo.Dialog
      Demo.Notebook
      Demo.Table
   default-language: Haskell2010
   ghc-options:      -Wall -j
   build-depends:
      base >=4.7 && <5,
      banana-ui-base -any,
      banana-ui-gtk -any,
      colour -any,
      containers -any,
      data-default -any,
      gi-gtk -any,
      lens -any,
      reactive-banana >=1.1,
      text >=1.2,
      time -any,
      banana-ui-gtk -any
