cabal-version: 2.4
name:          banana-ui-gtk
version:       2.0.0
license:       BSD-3-Clause
license-file:  LICENSE
copyright:     © 2020 Paul Johnson
maintainer:    paul@cogito.org.uk
author:        Paul Johnson
synopsis:      GTK integration for Reactive Banana.
description:   Declarative user interfaces for GTK3 and Reactive Banana.
category:      FRP, Graphics
build-type:    Simple
data-files:    banana-gtk.css

library
   hs-source-dirs: src
   exposed-modules:
      Reactive.Banana.GI
      Reactive.Banana.GI.ArrowDialog
      Reactive.Banana.GI.Common
      Reactive.Banana.GI.Connect
      Reactive.Banana.GI.DataIconTheme
      Reactive.Banana.GI.ErrorBox
      Reactive.Banana.GI.Menu
      Reactive.Banana.GI.Table
   default-language:   Haskell2010
   default-extensions:
      DeriveFunctor ExistentialQuantification ExtendedDefaultRules
      FlexibleContexts FlexibleInstances FunctionalDependencies
      GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
      MultiWayIf OverloadedStrings Rank2Types RankNTypes RecursiveDo
      ScopedTypeVariables TemplateHaskell TupleSections TypeFamilies
      ViewPatterns
   ghc-options:        -Wall
   other-modules: Paths_banana_ui_gtk
   autogen-modules: Paths_banana_ui_gtk
   build-depends:
      base >=4.14 && < 4.15,
      banana-ui-base == 2.0.0,
      bytestring,
      colour,
      containers >=0.5,
      data-default,
      gi-cairo,
      gi-cairo-connector,
      gi-cairo-render,
      gi-gdk,
      gi-gdkpixbuf,
      gi-gio,
      gi-glib,
      gi-gobject,
      gi-gtk,
      gi-gtk-hs,
      gi-pango,
      haskell-gi-base,
      haskell-gi-overloading >=1.0,
      lens,
      mtl,
      random,
      reactive-banana,
      text,
      time,
      transformers,
      -- uuid,
      vector

executable demo-arrow
   hs-source-dirs: demo-arrow
   main-is: Main.hs
   other-modules:
      Demo.Cond
      Demo.Dialog
      Demo.Notebook
      Demo.Table
   default-language: Haskell2010
   ghc-options:      -Wall
   build-depends:
      base >=4.14 && < 4.15,
      banana-ui-base == 2.0.0,
      banana-ui-gtk,
      colour,
      containers,
      data-default,
      gi-gtk,
      lens,
      reactive-banana >=1.1,
      text >=1.2,
      time,
      banana-ui-gtk
