cabal-version: >=1.18
name: uuid-gen
version: 0.1.1
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: © 2021 Paul Johnson
author: Paul Johnson
maintainer: paul@cogito.org.uk
synopsis: Flexible generation of UUIDs.
category: Graphics

library
   exposed-modules:
      Data.UUID.Generate
   default-language: Haskell2010
   default-extensions: Arrows DeriveFunctor ExistentialQuantification
                       ExtendedDefaultRules FlexibleContexts FlexibleInstances
                       FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
                       MultiParamTypeClasses MultiWayIf OverloadedStrings Rank2Types
                       RankNTypes RecursiveDo ScopedTypeVariables TemplateHaskell
                       TupleSections TypeFamilies ViewPatterns
   ghc-options: -Wall -j
   build-depends:
      base >= 4.8,
      bytestring -any,
      DRBG -any,
      text -any,
      uuid -any
